@@ -1,3 +1,4 @@
+
 package com.cico.service.impl;
 
 import java.time.DayOfWeek;
@@ -8,6 +9,7 @@ import java.time.LocalTime;
 import java.time.YearMonth;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -15,7 +17,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -33,6 +34,7 @@ import org.springframework.web.multipart.MultipartFile;
 
 import com.cico.exception.ResourceAlreadyExistException;
 import com.cico.exception.ResourceNotFoundException;
+import com.cico.kafkaServices.KafkaProducerService;
 import com.cico.model.Attendance;
 import com.cico.model.CounsellingInterview;
 import com.cico.model.Course;
@@ -53,6 +55,7 @@ import com.cico.payload.CourseResponse;
 import com.cico.payload.DashboardResponse;
 import com.cico.payload.MispunchResponse;
 import com.cico.payload.MockResponse;
+import com.cico.payload.NotificationInfo;
 import com.cico.payload.OnLeavesResponse;
 import com.cico.payload.PageResponse;
 import com.cico.payload.StudentCalenderResponse;
@@ -65,7 +68,6 @@ import com.cico.payload.TodayLeavesRequestResponse;
 import com.cico.repository.AttendenceRepository;
 import com.cico.repository.CounsellingRepo;
 import com.cico.repository.CourseRepository;
-import com.cico.repository.FeesRepository;
 import com.cico.repository.LeaveRepository;
 import com.cico.repository.MockRepo;
 import com.cico.repository.OrganizationInfoRepository;
@@ -75,10 +77,10 @@ import com.cico.repository.StudentSeatingAlloatmentRepo;
 import com.cico.repository.StudentWorkReportRepository;
 import com.cico.security.JwtUtil;
 import com.cico.service.IFileService;
-import com.cico.service.IQRService;
 import com.cico.service.IStudentService;
 import com.cico.util.AppConstants;
 import com.cico.util.HelperService;
+import com.cico.util.NotificationConstant;
 import com.cico.util.Roles;
 
 @Service
@@ -90,7 +92,11 @@ public class StudentServiceImpl implements IStudentService {
 
 	@Autowired
 	private StudentRepository studRepo;
+<<<<<<< HEAD
 	
+=======
+
+>>>>>>> 025bee8630ac7e935f5e771ee1e56ec030385b05
 	@Autowired
 	private CourseRepository courseRepository;
 
@@ -118,7 +124,10 @@ public class StudentServiceImpl implements IStudentService {
 	@Autowired
 	private ModelMapper mapper;
 
+<<<<<<< HEAD
 
+=======
+>>>>>>> 025bee8630ac7e935f5e771ee1e56ec030385b05
 	@Autowired
 	private BCryptPasswordEncoder encoder;
 
@@ -129,13 +138,13 @@ public class StudentServiceImpl implements IStudentService {
 	private StudentSeatingAlloatmentRepo studentSeatingAlloatmentRepo;
 
 	@Autowired
-	private IQRService qrService;
-
-	@Autowired
 	private MockRepo mockRepo;
 
 	@Autowired
 	private CounsellingRepo counsellingRepo;
+
+	@Autowired
+	private KafkaProducerService kafkaProducerService;
 
 	public Student getStudentByUserId(String userId) {
 		return studRepo.findByUserId(userId);
@@ -258,7 +267,8 @@ public class StudentServiceImpl implements IStudentService {
 	@Override
 	public ResponseEntity<?> registerStudent(Student student) {
 
-		Optional<Student> findByEmailAndMobile = studRepo.findByEmailAndMobile(student.getEmail().trim(), student.getMobile().trim());
+		Optional<Student> findByEmailAndMobile = studRepo.findByEmailAndMobile(student.getEmail().trim(),
+				student.getMobile().trim());
 		if (!findByEmailAndMobile.isPresent()) {
 			Optional<Course> course = courseRepository.findByCourseId(student.getCourse().getCourseId());
 			student.setCourse(course.get());
@@ -1246,53 +1256,16 @@ public class StudentServiceImpl implements IStudentService {
 	// reflect here if any changes are done in that method
 	@Override
 	public ResponseEntity<?> getTotalStudentInLeaves(Integer pageSize, Integer pageNumber) {
-
-		List<OnLeavesResponse> response = new ArrayList<>();
 		Page<OnLeavesResponse> totalStudentInLeaves = studRepo
 				.getTotalStudentInLeaves(PageRequest.of(pageNumber, pageSize));
-
-//		for (Object[] row : totalStudentInLeaves) {
-//			OnLeavesResponse leavesResponse = new OnLeavesResponse();
-//			Integer id = (Integer) row[0];
-//			Map<String, Object> studentData = this.getStudentData(id); // ?????? <-
-//			leavesResponse.setProfilePic(studentData.get("profilePic").toString());
-//			leavesResponse.setApplyForCourse(studentData.get("course").toString());
-//			leavesResponse.setName(studentData.get("studentName").toString());
-//			leavesResponse.setStudentId(id);
-//			leavesResponse.setLeaveDate((LocalDate) row[1]);
-//			leavesResponse.setLeaveEndDate((LocalDate) row[2]);
-//			leavesResponse.setStudentId(id);
-//
-//			response.add(leavesResponse);
-//		}
 		return new ResponseEntity<>(totalStudentInLeaves, HttpStatus.OK);
 	}
 
 	@Override
 	public ResponseEntity<?> getTotalTodaysLeavesRequest(Integer pageSize, Integer pageNumber) {
-
 		Page<TodayLeavesRequestResponse> totalTodaysLeavesRequest = studRepo
 				.getTotalTodaysLeavesRequest(PageRequest.of(pageNumber, pageSize));
 		return new ResponseEntity<>(totalTodaysLeavesRequest, HttpStatus.OK);
-//		List<TodayLeavesRequestResponse> response = new ArrayList<>();
-//
-//		for (Object[] row : totalTodaysLeavesRequest) {
-//			TodayLeavesRequestResponse leavesRequestResponse = new TodayLeavesRequestResponse();
-//			leavesRequestResponse.setLeaveDate((LocalDate) row[0]);
-//			leavesRequestResponse.setLeaveEndDate((LocalDate) row[1]);
-//			leavesRequestResponse.setStudentId((Integer) row[2]);
-//			leavesRequestResponse.setFullName((String) row[3]);
-//			leavesRequestResponse.setProfilePic((String) row[4]);
-//			leavesRequestResponse.setApplyForCourse((String) row[5]);
-//			leavesRequestResponse.setLeaveTypeId((Integer) row[6]);
-//			leavesRequestResponse.setLeaveDuration((Integer) row[7]);
-//			leavesRequestResponse.setLeaveReason((String) row[8]);
-//			leavesRequestResponse.setLeaveId((Integer) row[9]);
-//			leavesRequestResponse.setLeaveTypeName((String) row[10]);
-//			response.add(leavesRequestResponse);
-//		}
-//
-//		return response;
 	}
 
 	@Override
@@ -1304,6 +1277,20 @@ public class StudentServiceImpl implements IStudentService {
 		} else if (leaveStatus.equals("deny")) {
 			updateStudentLeaves = leaveRepository.updateStudentLeaves(studentId, 2, leaveId);
 		}
+
+		// .....firebase notification .....//
+		NotificationInfo fcmIds = studRepo.findFcmIdByStudentId(studentId);
+
+		String message = String.format(
+				leaveStatus.equals("approve") ? " %s your leave request has been approved. Enjoy your time off!"
+						: "%s your leave request has been denied. Reach out to the admin if you have any questions.",
+				fcmIds.getFullName());
+		fcmIds.setMessage(message);
+		fcmIds.setTitle(leaveStatus.equals("approve") ? "Leave Approved!" : "Leave Request Denied!");
+
+		kafkaProducerService.sendNotification(NotificationConstant.COMMON_TOPIC, fcmIds.toString());
+		// .....firebase notification .....//
+
 		return (updateStudentLeaves != 0) ? true : false;
 	}
 
@@ -1318,13 +1305,6 @@ public class StudentServiceImpl implements IStudentService {
 			return new PageResponse<>(Collections.emptyList(), student.getNumber(), student.getSize(),
 					student.getTotalElements(), student.getTotalPages(), student.isLast());
 		}
-
-		// List<StudentResponse> asList = Arrays.asList(mapper.map(student.getContent(),
-		// StudentResponse[].class));
-
-		// List<StudentReponseForWeb> collect = student.getContent().stream().map(obj ->
-		// studentFilter(obj))
-		// .collect(Collectors.toList());
 
 		for (Object[] row : student.getContent()) {
 
@@ -1353,13 +1333,6 @@ public class StudentServiceImpl implements IStudentService {
 	@Override
 	public PageResponse<StudentReponseForWeb> searchStudentByName(String fullName, Integer pageNumber,
 			Integer pageSize) {
-		// TODO Auto-generated method stub
-//		List<Student> findByFullNameContaining = studRepo.findAllByFullNameContaining(fullName);
-//		if (Objects.isNull(findByFullNameContaining)) {
-//			throw new ResourceNotFoundException("Student was not found");
-//		}
-//		List<StudentResponse> asList = Arrays.asList(mapper.map(findByFullNameContaining, StudentResponse[].class));
-//		return asList;
 		Page<StudentReponseForWeb> res = studRepo.findAllByFullNameContaining(fullName,
 				PageRequest.of(pageNumber, pageSize));
 
@@ -1394,9 +1367,6 @@ public class StudentServiceImpl implements IStudentService {
 
 	@Override
 	public ResponseEntity<?> updateStudent(Student student) {
-		
-		StudentResponse studentResponse = new StudentResponse();
-
 		Student studentData = studRepo.findByUserIdAndIsActive(student.getUserId(), true).get();
 		if (Objects.nonNull(studentData)) {
 			if (student.getFullName() != null)
@@ -1664,10 +1634,8 @@ public class StudentServiceImpl implements IStudentService {
 
 	@Override
 	public ResponseEntity<?> allStudent() {
-		// TODO Auto-generated method stub
-		List<Student> findAll = studRepo.getIsCompleted();
-		List<StudentReponseForWeb> collect = findAll.stream().map(obj -> studentFilter(obj))
-				.collect(Collectors.toList());
+		List<StudentReponseForWeb> collect = studRepo.getIsCompleted().parallelStream().map(obj -> studentFilter(obj))
+				.toList();
 		return new ResponseEntity<>(collect, HttpStatus.OK);
 	}
 
@@ -1942,11 +1910,74 @@ public class StudentServiceImpl implements IStudentService {
 
 	@Override
 	public ResponseEntity<?> allFeesRemainingStudent() {
-		
-		 List<StudentReponseForWeb> students = studRepo.allFeesRemainingStudent();
-		 
-		 return new ResponseEntity<>(students,HttpStatus.OK);
+		List<StudentReponseForWeb> students = studRepo.allFeesRemainingStudent();
+		return new ResponseEntity<>(students, HttpStatus.OK);
 
+	}
+
+	@Override
+	public ResponseEntity<?> updateFcmId(HttpHeaders header, String fcmId) {
+
+		String username = util.getUsername(header.getFirst(AppConstants.AUTHORIZATION));
+		Integer studentId = Integer.parseInt(
+				util.getHeader(header.getFirst(AppConstants.AUTHORIZATION), AppConstants.STUDENT_ID).toString());
+		Student student = studRepo.findByUserIdAndIsActive(username, true).get();
+		Boolean validateToken = util.validateToken(header.getFirst(AppConstants.AUTHORIZATION), student.getUserId());
+
+		Map<String, Object> map = new HashMap<>();
+
+		if (validateToken) {
+			studRepo.updateFcmId(fcmId, studentId);
+			map.put(AppConstants.MESSAGE, AppConstants.UPDATE_SUCCESSFULLY);
+			return new ResponseEntity<>(map, HttpStatus.OK);
+		} else
+			map.put(AppConstants.MESSAGE, AppConstants.UNAUTHORIZED);
+
+		return new ResponseEntity<>(map, HttpStatus.OK);
+	}
+
+	// getting task statics data of student
+
+	@Override
+	public ResponseEntity<?> getTaskStatics(Integer studentId) {
+		// TODO Auto-generated method stub
+
+		Map<String, Object> response = new HashMap<>();
+
+		List<Object[]> data = studRepo.getTaskStatics(studentId, LocalDate.now().getMonthValue());
+		int currentMonthLength = LocalDate.now().lengthOfMonth();
+
+		Long[] totalSubmitted = new Long[currentMonthLength];
+		Long[] totalAccepted = new Long[currentMonthLength];
+		Long[] totalRejected = new Long[currentMonthLength];
+		Long[] categories = new Long[currentMonthLength];
+
+		Arrays.fill(totalSubmitted, 0L); // Initialize the days array with zeros
+		Arrays.fill(totalRejected, 0L);
+		Arrays.fill(totalAccepted, 0L);
+		
+		for (int i = 0; i < currentMonthLength; i++) {
+		    categories[i] = (long) (i + 1); // Assigning values from 1 to currentMonthLength
+		}
+		data.forEach(d -> {
+			// Assuming the data format is [dayOfMonth, taskCount]
+			Integer dayOfMonth = (Integer) d[0];
+			Long taskCount = (Long) d[1];
+
+			if (dayOfMonth > 0 && dayOfMonth <= currentMonthLength) {
+				totalSubmitted[(int) (dayOfMonth - 1)] = taskCount; // Store taskCount in the corresponding day
+			}
+			totalAccepted[(int) (dayOfMonth - 1)] = (Long) d[2];
+			totalRejected[(int) (dayOfMonth - 1)] = (Long) d[3];
+
+		});
+		
+
+		response.put("totalSubmitted", totalSubmitted);
+		response.put("totalAccepted", totalAccepted);
+		response.put("totalRejected", totalRejected);
+		response.put("categories", categories);
+		return new ResponseEntity<>(response, HttpStatus.OK);
 	}
 
 }
